Comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
    <main>
     <header>
-        <h1>Titulo do Site</h1>
+        <h1>Cursos Gratis</h1>
     </header>
-    <h2>Artigo 001</h2>
-    <p>Texto Artigo001</p>
+    <h2>Curso de HTML5 com CSS3</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, dolore excepturi reiciendis ipsum necessitatibus temporibus aut, perspiciatis sequi quibusdam delectus at maxime enim autem quis veniam, explicabo officiis quos sed?</p>
     <article>
-        <h2>Artigo 002</h2>
-        <p>Texto Artigo 002</p>
+        <h2>Curso de JavaScript</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda mollitia nulla nostrum excepturi delectus distinctio molestias voluptas, iste, tenetur praesentium, doloremque possimus accusantium libero consequatur voluptatem dicta numquam! Debitis, esse.</p>
     </article>
    </main> 
 </body>
